# QuantumTransformers

./: .gitignore  README.md  classical.ipynb  data.py  environment.yml  pyproject.toml  quantum.ipynb  training.py  transformers.py  utils.py
hpopt/: README.md  agent.py  clean.sh  config.json  hpopt.py  nersc_agents.sh  start-head.sh  start-worker.sh  submit-ray-cluster.sh  sweep.py
notebooks/: visualizations.ipynb
notebooks/classical/: electron-photon.ipynb  imdb.ipynb  mnist.ipynb  quark-gluon-resnet.ipynb  quark-gluon.ipynb
notebooks/quantum/: electron-photon.ipynb  imdb.ipynb  mnist.ipynb  quantum.ipynb  quark-gluon.ipynb  qvit_cerrat_et_al.ipynb
notebooks/quark-gluon-extra/: quark-gluon-resnet.ipynb  visualizations.ipynb
quantum_transformers/: __init__.py  data.py  datasets.py  quantum_layer.py  training.py  transformers.py  utils.py
quantum_transformers/datasets/: __init__.py  hep.py  medmnist.py  mnist.py  nlp.py
quantum_transformers/qmlperfcomp/: README.md  mlp.ipynb  plots.ipynb  swiss_roll.py  tc_common.py  tensorcircuit.ipynb  vit.ipynb
quantum_transformers/qmlperfcomp/jax/: training.py
quantum_transformers/qmlperfcomp/jax_backend/: __init__.py  data.py  training.py
quantum_transformers/qmlperfcomp/jax_backend/classical/: mlp.py  vit.py
quantum_transformers/qmlperfcomp/jax_backend/quantum/: __init__.py  mlp.py  pennylane_backend.py  tensorcircuit_backend.py  vit.py
quantum_transformers/qmlperfcomp/torch_backend/: data.py  training.py
quantum_transformers/qmlperfcomp/torch_backend/classical/: mlp.py  vit.py
quantum_transformers/qmlperfcomp/torch_backend/quantum/: mlp.py  pennylane_backend.py  tensorcircuit_backend.py  vit.py
