[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "QuantumTransformers"
version = "0.0.1"
readme = "README.md"
dependencies = [
    "numpy",
    "matplotlib",
    "gdown",
    "torchmetrics",
    "torch",
    "torchvision",
    "pennylane"
]

[project.optional-dependencies]
jupyter = [
    "jupyterlab",
    "ipywidgets"
]

nlp = [
    "torchtext",
    "portalocker"
]

medmnist = [
    "medmnist"
]

[tool.setuptools]
packages = [
    "quantum_transformers",
    "quantum_transformers.datasets",
]
