[tool.poetry]
name = "quantum_transformers"
version = "0.1.0"
description = ""
authors = ["Marçal Comajoan Cara <mcomajoancara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scikit-learn = "^1.3.0"
torch = "2.0.0"
pennylane = "^0.31.1"
pennylane-lightning = {extras = ["gpu"], version = "^0.31.0"}
tensorcircuit = "^0.11.0"
jax = {version = "0.4.13", extras = ["cuda11-cudnn86"]}
pennylane-catalyst = "^0.2.1"
flax = "^0.7.1"
optax = "^0.1.7"
torchvision = "0.15.1"
ipykernel = "^6.25.0"
jupyterlab = "^4.0.4"
matplotlib = "^3.7.2"
tensorflow-datasets = "^4.9.2"
tensorflow = "^2.13.0"
ipywidgets = "^8.1.0"
tqdm = "^4.65.0"
numpy = "~1.23"
gdown = "^4.7.1"
medmnist = "^2.2.2"
qiskit = "^0.44.0"
pylatexenc = "^2.10"
tensorflow-text = "2.14.0rc0"


[[tool.poetry.source]]
name = "jax_cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
nbqa = {extras = ["toolchain"], version = "^1.7.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
