[tool.poetry]
name = "quantum_transformers"
version = "0.1.0"
description = ""
authors = ["Marçal Comajoan Cara <mcomajoancara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scikit-learn = "^1.5.0"
tensorcircuit = "^0.11.0"
jax = {version = "0.4.13", extras = ["cuda11-cudnn86"]}
flax = "^0.7.1"
optax = "^0.1.7"
ipykernel = "^6.25.0"
jupyterlab = "^4.0.11"
matplotlib = "^3.7.2"
tensorflow-datasets = "^4.9.2"
tensorflow = "^2.14.0"
ipywidgets = "^8.1.0"
tqdm = "^4.66.3"
numpy = "^1.25.2"
gdown = "^4.7.1"
qiskit = "^0.44.0"
pylatexenc = "^2.10"
tensorflow-text = "^2.14.0"
ray = {extras = ["tune"], version = "^2.6.3"}


[[tool.poetry.source]]
name = "jax_cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
nbqa = {extras = ["toolchain"], version = "^1.7.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"
